# OpenDX-samples

./: ROCKY8BUILD  acinclude.m4
java/nets/: Makefile.am
programs/2D_DATA/: Makefile.am
programs/3D_DATA/: Makefile.am
programs/ANNOTATION/: Makefile.am
programs/CATEGORICAL/: Makefile.am
programs/COLORMAP_EDITOR/: Makefile.am
programs/COMPUTE/: Makefile.am
programs/DATA_DRIVEN_INTERACTORS/: Makefile.am
programs/DEBUGGING/: Makefile.am
programs/DISTRIBUTED_PROCESSING/: Makefile.am
programs/IMAGE_PROCESSING/: Makefile.am
programs/IMPORTING/: Makefile.am
programs/INTERFACE_CONTROL/: Makefile.am
programs/LOOPING/: Makefile.am
programs/MISC/: Makefile.am
programs/PLOTTING/: Makefile.am
programs/PROBES/: Makefile.am
programs/RENDERING/: Makefile.am
programs/SCATTERED/: Makefile.am
programs/SEQUENCER/: Makefile.am
programs/SIMPLE/: Makefile.am
programs/SUPERVISE/: Makefile.am
supervise/interactors/: myinteractors.c
util/: Makefile.sample
util/biorad-pic/: ._PIC2dx.c
